[package]
build = "build.rs"
name = "rdc"
version = "0.1.0"
authors = ["Enrico Franchi <enrico.franchi@gmail.com>"]

[dependencies]
num = "0.1.42"
num-bigint = "0.1"
bigdecimal = "0.0.11"
lazy_static = "1.0"

[features]
default = []
tracevm = []
nightly = []

[build-dependencies]
rustc_version = "0.1.*"

[profile.release]
debug = true